# DroNE

./: README  install.txt  setup.sh
Algorithms/: CMakeLists.txt
Algorithms/python/Algorithms/: __init__.py
Algorithms/share/: CtrlTask.py  PyIncident.py  ctrl.py  dim.py  epics.py  newrun.py  run.py  sim.py
Algorithms/src/: DumpAlg.cc  DumpAlg.h  FileReadoutAlg.cc  FileReadoutAlg.h  GPPDMAPMTMapAlg.cc  GPPDMAPMTMapAlg.h  GPPDMAPMTRecAlg.cc  GPPDMAPMTRecAlg.h  GPPDSNDFastSimAlg.cc  GPPDSNDFastSimAlg.h  GPPDSNDMapAlg.cc  GPPDSNDMapAlg.h  GPPDSNDRecAlg.cc  GPPDSNDRecAlg.h  MRHe3TMapAlg.cc  MRHe3TMapAlg.h  MRHe3TRecAlg.cc  MRHe3TRecAlg.h  MRMWPCMapAlg.cc  MRMWPCMapAlg.h  MRMWPCRecAlg.cc  MRMWPCRecAlg.h  REFLMAPMTSimAlg.cc  REFLMAPMTSimAlg.h  REFLMWPCFastSimAlg.cc  REFLMWPCFastSimAlg.h  REFLMWPCMapAlg.cc  REFLMWPCMapAlg.h  REFLMWPCRecAlg.cc  REFLMWPCRecAlg.h  RunningInfAlg.cc  RunningInfAlg.h  SANSHe3TFastSimAlg.cc  SANSHe3TFastSimAlg.h  SANSHe3TMapAlg.cc  SANSHe3TMapAlg.h  SANSHe3TRecAlg.cc  SANSHe3TRecAlg.h  SaveDataAlg.cc  SaveDataAlg.h  (+4 more)
CMake/Modules/: FindDataSvc.cmake  FindDim.cmake  FindDroNECore.cmake  FindSniperKernel.cmake  FindTinyXML.cmake
CtrlSvc/: CMakeLists.txt
CtrlSvc/CtrlSvc/: BeginEvtHdl.h  ClearDataSvcHdl.h  CtrlSvc.h  EndEvtHdl.h  GPPDCtrlSvc.h  HeartBeatHdl.h  HelloDroNEHdl.h  OnlineBeginEvtHdl.h  PushHistHdl.h  PushMatrixHdl.h
CtrlSvc/python/CtrlSvc/: HeartBeatIncident.py  HelloDroNEIncident.py  NeonClearTask.py  NeonRPCIncident.py  NeonRPCTask.py  NeonUpdateDataTask.py  PushHistIncident.py  PushMatrixIncident.py  __init__.py
CtrlSvc/python/NEON/: Data.py  Neon.py  README  __init__.py  setup.sh
CtrlSvc/python/NEON/test/: RPC.py  Test.py
CtrlSvc/src/: BeginEvtHdl.cc  ClearDataSvcHdl.cc  CtrlSvc.cc  EndEvtHdl.cc  GPPDCtrlSvc.cc  HeartBeatHdl.cc  HelloDroNEHdl.cc  OnlineBeginEvtHdl.cc  PushHistHdl.cc  PushMatrixHdl.cc
DataSvc/: CMakeLists.txt  Install
DataSvc/Data/: DataObject.h  ECal.h  Evt.h  EvtD.h  GPPDStatistic.h  He3THit.h  Hit.h  MWPCHit.h  Pulse.h  SNDHit.h
DataSvc/DataSvc/: AlgMgr.h  BeginEvtHdl.h  CtrlSvc.h  DataSvc.h  DecodeHe3TRawData.h  DecodeHe3TRawDataV02.h  DecodeMWPCRawData.h  DecodeRawData.h  DecodeRawDataBase.h  DimRecvSvc.h  DroNEIncident.h  DroNEIncidentHandler.h  DynamicThreadedQueue.h  EpicsInputSvc.h  FileInputSvc.h  GPPDDataSvc.h  He3TRawDataInputSvc.h  He3TRawDataInputSvcV02.h  HeartBeatHdl.h  MRDataSvc.h  MRDataSvcV02.h  MWPCRawDataInputSvc.h  REFLDataSvc.h  RawDataInputSvc.h  SANSDataSvc.h  SimNeutronGunInputSvc.h
DataSvc/DataSvc/EpicsV4Hh/: neutronClientRequestAndMonitor.hh  neutronClientStartMonitor.hh
DataSvc/python/DataSvc/: CtrlTask.py  PyIncident.py  __init__.py
DataSvc/src/: BeginEvtHdl.cc  DataInputSvc.cc  DataProvideSvc.cc  DataSvc.cc  DecodeHe3TRawData.cc  DecodeHe3TRawDataV02.cc  DecodeMWPCRawData.cc  DecodeRawData.cc  DecodeRawDataBase.cc  DimRecvSvc.cc  DroNE.cc  DroNEIncident.cc  DroNEIncidentHandler.cc  EndEvtHdl.cc  EpicsInputSvc.cc  FileInputSvc.cc  GPPDDataSvc.cc  He3TRawDataInputSvc.cc  He3TRawDataInputSvcV02.cc  HeartBeatHdl.cc  MRDataSvc.cc  MRDataSvcV02.cc  MWPCRawDataInputSvc.cc  REFLDataSvc.cc  RawDataInputSvc.cc  SANSDataSvc.cc  SimNeutronGunInputSvc.cc  neutronClientStartMonitor.cc
DataSvc/src/EpicsV4Src/: neutronClientRequestAndMonitor.cc
DataSvc/src/binding/: DroNEExp.cc  DroNEIncidentExp.cc  ModuleDef.cc
DroNECore/: CMakeLists.txt
DroNECore/DroNECore/: BeginEvtHdl.h  DataInputSvc.h  DataObject.h  DataProvideSvc.h  DataSvc.h  DroNE.h  DroNEIncident.h  DroNEIncidentHandler.h  DroNEOnline.h  DynamicSingleton.h  DynamicThreadedQueue.h  DynamicTreeNode.h  EndEvtHdl.h
DroNECore/python/DroNECore/: CtrlTask.py  PyIncident.py  __init__.py
DroNECore/src/: BeginEvtHdl.cc  DataInputSvc.cc  DataProvideSvc.cc  DataSvc.cc  DroNE.cc  DroNEIncident.cc  DroNEIncidentHandler.cc  DroNEOnline.cc  EndEvtHdl.cc
DroNECore/src/binding/: DroNEExp.cc  DroNEIncidentExp.cc  DroNEOnlineExp.cc  ModuleDef.cc
PyDroNE/: ctrl.py  dim.py  epics.py  online.py  onlinedim.py  onlinefile.py  run.py  testdim.py
PyDroNE/daq_ctrloffice/: onlinedim.py
PyDroNE/daqrun_ctrloffice/: configure.xml  onlinedim.py  pycmd
PyDroNE/datarun_ctrloffice/: nohup.out  onlinefile.py  pycmd
PyDroNE/epics_ctrloffice/: epics.py
PyDroNE/gppd_reconstruction/: gppdrun.py
PyDroNE/gppd_simulation/: gppdsim.py
PyDroNE/mrmwpc_reconstruction/: mr_mwpc.py  reflrun.py
PyDroNE/refl_reconstruction/: reflrun.py
PyDroNE/refl_simulation/: cdfd.py  reflsim.py
PyDroNE/sans_reconstruction/: rawtxt.txt  readraw.txt  sansrun.py  sansrunv02.py
PyDroNE/sans_simulation/: sanssim.py
PyDroNE/simlation/: gppdsim.py  run.py
PyDroNE/test/: configure.xml  ctrl.py  dataclient.py  dim.py  onlinedim.py  run.py
PyDroNE/test/neondeom/: dataclient.py  rpcclient.py  rpcstart.py  rpcstop.py
PyDroNE/test/rpc/: rpcclear.py  run.py
Scripts/: ctrl.py  run.py
